Added to README: Challenge, solutions proposal, results, escope, tools

--- a/Notebooks/data_exploration.ipynb
+++ b/Notebooks/data_exploration.ipynb
@@ -30,7 +30,7 @@
     "#models and feature selection\n",
     "from   sklearn.model_selection import StratifiedShuffleSplit, train_test_split, RandomizedSearchCV\n",
     "from   sklearn.linear_model    import LogisticRegression\n",
-    "from   sklearn.ensemble        import RandomForestClassifier, RandomForestRegressor, ExtraTreesClassifier\n",
+    "from   sklearn.ensemble        import RandomForestClassifier, ExtraTreesClassifier\n",
     "from   sklearn.neighbors       import KNeighborsClassifier\n",
     "from   sklearn.naive_bayes     import GaussianNB\n",
     "import xgboost as xgb \n",
@@ -143,7 +143,6 @@
     "#split train test stratified\n",
     "def stratified_split (df , feature):    \n",
     "    split = StratifiedShuffleSplit(n_splits=1, test_size=0.1, random_state=11)\n",
-    "\n",
     "    for train_index, test_index in split.split( df, df[feature] ):\n",
     "        train_set = df.loc[train_index].reset_index(drop=True)\n",
     "        test_set = df.loc[test_index].reset_index(drop=True)\n",
